--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,48 @@
+version: "3.8"
+
 services:
   mongodb:
-    image: mongo
-    container_name: mongodb
+    image: mongo:7.0
+    container_name: event-mongodb
+    restart: unless-stopped
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: event-db
     volumes:
-      - mongo-data:/data/db
- 
+      - mongodb_data:/data/db
+    networks:
+      - event-network
+
   backend:
-    build: ./backend
-    container_name: backend
-    ports:
-      - "5000:5000"
+    image: tharik2000/devops-engineering:backend-v2
+    container_name: event-backend
+    restart: unless-stopped
     depends_on:
       - mongodb
+    ports:
+      - "5000:5000"
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/myappdb
-    volumes:
-      - ./backend:/app:delegated
-      - /app/node_modules
-    
+      MONGO_URI: mongodb://admin:password@mongodb:27017/event-db?authSource=admin
+    networks:
+      - event-network
 
   frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "5173:5173"
+    image: tharik2000/devops-engineering:frontend-v2
+    container_name: event-frontend
+    restart: unless-stopped
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app:delegated
-      - /app/node_modules
-    stdin_open: true
-    tty: true
-
+    ports:
+      - "5173:5173"
+    networks:
+      - event-network
 
 volumes:
-  mongo-data:
+  mongodb_data:
+
+networks:
+  event-network:
+    driver: bridge
