--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,9 @@ FROM node:22.14.0
 
 WORKDIR /app
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 RUN npm install
 
-# copy app source
 COPY . .
 
 EXPOSE 5173
