--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      VITE_API_URL: http://localhost:5000/api
+      VITE_API_URL: http://13.202.22.95:5000/api
     networks:
       - event-network
 
