fix: properly pass VITE_API_URL to frontend Docker build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,10 @@ RUN npm install --legacy-peer-deps
 
 COPY . .
 
+# Accept build-time environment variable
+ARG VITE_API_URL=http://localhost:5000/api
+ENV VITE_API_URL=${VITE_API_URL}
+
 EXPOSE 5173
 
 CMD ["npm", "run", "dev"]
