--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: http://43.205.47.152:5000/api
     container_name: event-frontend
     restart: unless-stopped
     depends_on:
@@ -44,7 +46,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      VITE_API_URL: http://13.202.22.95:5000/api
+      VITE_API_URL: http://43.205.47.152:5000/api
     networks:
       - event-network
 
